--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,7 +20,7 @@ const currentYear = new Date().getFullYear();
         <ul class="footer__list">
           <li><a href="/">Home</a></li>
           <li><a href="/support">Support</a></li>
-          <li><a href="https://apps.apple.com/app/id1234567890">Download</a></li>
+          <li><span class="footer__disabled">Coming Soon</span></li>
         </ul>
       </div>
       
@@ -132,6 +132,13 @@ const currentYear = new Date().getFullYear();
     font-size: 0.875rem;
     text-align: center;
     margin-bottom: 0;
+  }
+  
+  .footer__disabled {
+    color: var(--color-text-light);
+    font-size: 0.875rem;
+    opacity: 0.6;
+    font-style: italic;
   }
   
   @media (max-width: 768px) {
