--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,6 +10,8 @@
       </a>
       <div class="nav__links">
         <a href="/support" class="nav__link">Support</a>
+        <!-- LAUNCH TODO: Replace with App Store link -->
+        <!-- <a href="https://apps.apple.com/app/YOUR_APP_ID" class="nav__cta">Download</a> -->
         <button class="nav__cta nav__cta--disabled" disabled>
           Coming Soon
         </button>
@@ -82,6 +84,7 @@
     opacity: 1;
   }
   
+  /* LAUNCH TODO: Remove these disabled styles when going live */
   .nav__cta--disabled {
     opacity: 0.6;
     cursor: not-allowed;
